--- a/pastebin/templates/index.html
+++ b/pastebin/templates/index.html
@@ -24,6 +24,7 @@
         {% endif %}
         <form name="pastebin" method="post">
           Your name: <input type="text" name="user_name" width="40" value="{% if user_name %}{{user_name}}{% endif %}" /><br />
+          Paste Title: <input type="text" name="title" value="" /><br />
           <textarea id="bin" name="paste" rows="40" style="height: 70%; width: 100%;"></textarea><br />
           <input type="submit" value="paste" />
         </form>
