add some links to make navving the site easier

--- a/pastebin/templates/base.html
+++ b/pastebin/templates/base.html
@@ -12,7 +12,9 @@
     <div class="wrapper">
       <div id="header">
         <h1>{{title}}</h2>
+      <a href="/search">browse pastes</a>&nbsp;/&nbsp;<a href="/">create a paste</a><br />
       </div>
+
       {% if error %}
       <div id="error">
         {{error}}
